2011-05-05  Dietmar Warning
 * spicelib/devices/bsim3v32/*.c, *.h: allow delvto and mulu0 as instance 
   parameter, usefull for stress amn mismatch simulations

2011-05-04  Dietmar Warning
 * spicelib/parser/inpdomod.c: vbic now accept level 4 and 9
 * DEVICES: update and include HiSIM HV model.
 
2011-05-03  Holger Vogt
 * x11.c, graph.h: move #define NUMCOLORS to x11.c to avoid redefinition 
   under MS Visual Studion

2011-05-01  Robert Larice
 * src/frontend/outitf.c ,
 * src/spicelib/analysis/cktpzstr.c ,
 * src/spicelib/devices/hisim/hsm1eval1_1.c :
    spelling fixes from debian, thank you !

2011-05-01  Robert Larice
 * src/spicelib/parser/inpdomod.c :
    mop up, in the shadow of the last commits

2011-05-01  Robert Larice
 * src/spicelib/parser/inpdomod.c :
    rename variable typename  -->  type_name

2011-05-01  Robert Larice
 * src/xspice/cmpp/ifs_yacc.y :
    rename variable class  -->  ctype_class

2011-05-01  Robert Larice
 * src/frontend/parser/complete.c ,
 * src/include/cpextern.h :
    rename variable class  -->  kw_class

2011-05-01  Robert Larice
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/analysis/analysis.h ,
 * src/spicelib/analysis/cktdojob.c ,
 * src/spicelib/analysis/ckttroub.c :
    rename struct member public  -->  if_analysis

2011-05-01  Robert Larice
 * src/frontend/help/x11disp.c :
    rename function delete  -->  delete_w

2011-05-01  Robert Larice
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inpdpar.c ,
 * src/spicelib/parser/inppname.c ,
 * src/xspice/mif/mifgetmod.c :
    mop up, in the shadow of the last two commits

2011-05-01  Robert Larice
 * src/spicelib/parser/inpgmod.c ,
 * src/xspice/mif/mifgetmod.c :
    cleanup, (modtmp) --> modtmp

2011-05-01  Robert Larice
 * src/spicelib/parser/inpaname.c ,
 * src/spicelib/parser/inpdpar.c ,
 * src/spicelib/parser/inpgmod.c ,
 * src/spicelib/parser/inppname.c ,
 * src/spicelib/parser/inptyplk.c ,
 * src/xspice/mif/mifgetmod.c :